--- a/Client/Features/Contact.razor
+++ b/Client/Features/Contact.razor
@@ -26,7 +26,7 @@
 #nullable disable
 	void ThrowExceptionButtonClick()
 	{
-		Logger!.LogInformation("Inside {Class}!{Method}", nameof(Contact), nameof(ThrowExceptionButtonClick));
+		Logger!.LogInformation("{Class}!{Method}", nameof(Contact), nameof(ThrowExceptionButtonClick));
 		try
 		{
 			for (int i = 0; i < 10; i++)
