--- a/Client/Layout/MainLayout.razor
+++ b/Client/Layout/MainLayout.razor
@@ -8,14 +8,10 @@
 @inject IToastService? Toast
 
 <div class="@MediaQuery.Xs.DivClass">
-	<TopRowSection MediaQuery="@MediaQuery.Xs" /> 
+	<TopRowSectionXs /> 
 </div>
-
-<div class="@MediaQuery.Sm.DivClass">
-	<TopRowSection MediaQuery="@MediaQuery.Sm" />
-</div>
-<div class="@MediaQuery.MdOrLgOrXl.DivClass">
-	<TopRowSection MediaQuery="@MediaQuery.MdOrLgOrXl" />
+<div class="@MediaQuery.SmOrMdOrLgOrXl.DivClass">
+	<TopRowSection />
 </div>
 
 <div class="d-flex justify-content-end mt-1 mx-1">
@@ -36,7 +32,7 @@
 	/*
 	protected override async Task OnInitializedAsync()
 		{
-		Logger!.LogInformation("Inside {Class}!{Method}", nameof(MainLayout), nameof(OnInitializedAsync));
+		Logger!.LogInformation("{Class}!{Method}", nameof(MainLayout), nameof(OnInitializedAsync));
 		}
 	*/
 
