--- a/Client/Layout/Navigation/HomeButton.razor
+++ b/Client/Layout/Navigation/HomeButton.razor
@@ -1,45 +1,37 @@
 ﻿@using Page = Client.Enums.Nav
 
 <div class="d-sm-none">
-	<a class="@CssClass" title="<576px Xs | @CssClass" href="@Page.Home.Index">
+	<a class="btn btn-secondary btn-sm" title="<576px Xs" href="@Page.Home.Index">
 		<i class="@Page.Home.Icon"></i>
 	</a>
 </div>
 
 
 <div class="d-none d-sm-block d-md-none d-lg-none d-xl-none">
-	<a class="@CssClass" title="≥576px Sm | @CssClass" href="@Page.Home.Index">
+	<a class="btn btn-secondary btn-sm" title="≥576px Sm" href="@Page.Home.Index">
 		<i class="@Page.Home.Icon"></i>
 	</a>
 </div>
 
 <div class="d-none d-md-block d-lg-none d-xl-none">
-	<a class="@CssClass " title="≥768px Md | @CssClass" href="@Page.Home.Index">
+	<a class="btn btn-secondary btn-sm " title="≥768px Md" href="@Page.Home.Index">
 		<i class="@Page.Home.Icon"></i>
 	</a>
 </div>
 
 <div class="d-none d-lg-block d-xl-none">
-	<a class="@CssClass " title="≥992px Lg | @CssClass" href="@Page.Home.Index">
+	<a class="btn btn-secondary btn-sm " title="≥992px Lg" href="@Page.Home.Index">
 		<i class="@Page.Home.Icon"></i>
 	</a>
 </div>
 
 <div class="d-none d-xl-block">
-	<a class="@CssClass " title="≥1200px Xl | @CssClass" href="@Page.Home.Index">
+	<a class="btn btn-secondary btn-sm " title="≥1200px Xl" href="@Page.Home.Index">
 		<i class="@Page.Home.Icon"></i>
 	</a>
 </div>
 
 
 @code {
-	[Parameter, EditorRequired] public string? CssClass { get; set; }
-
-	/*
-		ToDo: what's special about this ... `navbar-brand nav-link`
-
-		[Parameter] public string? Title { get; set; } // = Meta.Acronym  Page.Home.Acronym
-		protected string? title = Meta.Acronym;
-	*/
 
 }
